@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-09-27 Fri 14:14 -->
+<!-- 2024-09-29 Sun 14:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-09-27 14:14:46</i></td>
+<td class="org-left"><i>2024-09-29 14:39:07</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-09-27 14:14:56</i></td>
+<td class="org-left"><i>2024-09-29 14:39:11</i></td>
 </tr>
 </tbody>
 </table>
@@ -308,7 +308,8 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <li>New
 <ul class="org-ul">
 <li>phoenix: Classic phoenix fractal (escape time)</li>
-<li>phoenixD: Classic phoenix fractal (distance estimator)</li>
+<li>phoenixD: Classic phoenix fractal (distance estimator outside)</li>
+<li>phoenixI: Classic phoenix fractal (distance estimator inside)</li>
 <li>phoenixM: A movie of the classic phoenix fractal</li>
 <li>phoenixM2: Another movie of the classic phoenix fractal</li>
 </ul></li>
